Closed
Bug 760347
Opened 13 years ago
Closed 13 years ago
nsDeviceSensor.cpp ASSERTs in debug builds for light sensors
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: dhylands, Assigned: dhylands)
Details
Attachments
(1 file, 1 obsolete file)
1.10 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
I'm hitting the following assert in B2G on debug builds:
Assertion failure: i < Length() (invalid array index), at ../../dist/include/nsTArray.h:535
This appears to be occuring with light sensors which only have a single value. The nsDeviceSensors::Notify function blindly pulls 3 values which causes the assert.
Updated•13 years ago
|
Component: Hardware Abstraction Layer (HAL) → DOM: Device Interfaces
QA Contact: hal → device-interfaces
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #629033 -
Flags: review?(doug.turner)
I would do
const InfallibleTArray<float>& values = aSensorData.values();
size_t len = values.Length();
double x = len > 0 ? values[0] : 0.0;
double y = len > 1 ? values[1] : 0.0;
//...
Assignee | ||
Comment 3•13 years ago
|
||
Bah. Humbug.
OK - I like the looks of your version better.
Attachment #629033 -
Attachment is obsolete: true
Attachment #629033 -
Flags: review?(doug.turner)
Attachment #629041 -
Flags: review?(doug.turner)
Updated•13 years ago
|
Attachment #629041 -
Flags: review?(doug.turner) → review+
Assignee | ||
Updated•13 years ago
|
Whiteboard: need
Assignee | ||
Updated•13 years ago
|
Whiteboard: need → checkin-needed
Updated•13 years ago
|
Assignee: nobody → dhylands
Comment 4•13 years ago
|
||
Whiteboard: checkin-needed
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in
before you can comment on or make changes to this bug.
Description
•