Bug 760347 - nsDeviceSensor.cpp ASSERTs in debug builds for light sensors. r=dougt